Distorted SVG correction.

--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,8 @@ header ul li a:hover {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
-    max-width: 90%;
+    max-width: 100%;
+    height: auto;
     padding: 5rem 0;
   }
 }
