--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -183,7 +183,8 @@ header {
 
     @media screen and (max-width: 1100px) {
       order: 1;
-      max-width: 90%;
+      max-width: 100%;
+      height: auto;
       padding: 5rem 0;
     }
   }
